--- a/erpnext/www/me.html
+++ b/erpnext/www/me.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <!-- no-cache -->
-<div class="row your-account-info d-none d-sm-block">
+<div class="your-account-info">
 	<div>
 		<ul class="list-unstyled">
 			<li>
