feat: Subscription portal wip

--- a/erpnext/www/me.html
+++ b/erpnext/www/me.html
@@ -9,7 +9,7 @@
 	<div>
 		<ul class="list-unstyled">
 			<li>
-				<div class="card w-50">
+				<div class="frappe-card card w-50">
 					<div class="card-body">
 						<h5 class="card-title">{{ _("Reset your password") }}</h5>
 						<a href="/update-password" class="btn btn-primary">{{ _("Reset password") }}</a>
@@ -17,7 +17,7 @@
 				  </div>
 			</li>
 			<li>
-				<div class="card w-50">
+				<div class="frappe-card card w-50">
 					<div class="card-body">
 						<h5 class="card-title">{{ _("Edit your user profile") }}</h5>
 						<a href="/update-profile?name={{ user }}" class="btn btn-primary">{{ _("Edit profile") }}</a>
@@ -26,7 +26,7 @@
 			</li>
 			{% if third_party_apps %}
 			<li>
-				<div class="card w-50">
+				<div class="frappe-card card w-50">
 					<div class="card-body">
 						<h5 class="card-title">{{ _("Manage your third party applications") }}</h5>
 						<a href="/third_party_apps" class="btn btn-primary">{{ _("Manage applications") }}</a>
@@ -36,7 +36,7 @@
 			{% endif %}
 			{% if subscription %}
 			<li>
-				<div class="card w-50">
+				<div class="frappe-card card w-50">
 					<div class="card-body">
 						<h5 class="card-title">{{ _("Your subscription") }}</h5>
 						{% for plan in subscription.plans %}
@@ -44,14 +44,23 @@
 							<label>{{ item_name }}</label>
 							<p class="card-text">{{ plan.description or "" }}</p>
 						{% endfor %}
-						<a href="/subscriptions" class="btn btn-primary">{{ _("Edit subscription") }}</a>
+						<a href="/subscription" class="btn btn-primary">{{ _("Edit subscription") }}</a>
+					</div>
+				</div>
+			</li>
+			{% elif subscriptions_available %}
+			<li>
+				<div class="frappe-card card w-50">
+					<div class="card-body">
+						<h5 class="card-title">{{ _("Subscribe to a plan") }}</h5>
+						<a href="/subscription" class="btn btn-primary">{{ _("Subscribe") }}</a>
 					</div>
 				</div>
 			</li>
 			{% endif %}
 			{% if enable_stripe %}
 			<li>
-				<div class="card w-50">
+				<div class="frappe-card card w-50">
 					<div class="card-body">
 						<h5 class="card-title">{{ _("Manage your payment methods") }}</h5>
 						{% for details in stripe_payment_methods.data %}
