--- a/erpnext/www/all-products/index.html
+++ b/erpnext/www/all-products/index.html
@@ -51,7 +51,7 @@
 				{%- set item_field =  field_filter[0] %}
 				{%- set values =  field_filter[1] %}
 				<div class="mb-4">
-					<h6>{{ item_field.label }}</h6>
+					<h6>{{ _(item_field.label) }}</h6>
 
 					{% if values | len > 20 %}
 					<!-- show inline filter if values more than 20 -->
@@ -160,4 +160,6 @@
 
 {% endblock %}
 
-
+{% block script %}
+<script>{% include "erpnext/www/all-products/index.js" %}</script>
+{% endblock %}
