feat: Portal UI enhancement

--- a/erpnext/www/all-products/item_row.html
+++ b/erpnext/www/all-products/item_row.html
@@ -2,7 +2,7 @@
 	<i class="text-muted">{{ _("No description") }}</i>
 {% endmacro %}
 
-<div class="card mb-3">
+<div class="frappe-card mb-3">
 	<div class="row no-gutters">
 		<div class="col-md-3">
 			<div class="card-body">
