--- a/erpnext/www/support/index.html
+++ b/erpnext/www/support/index.html
@@ -1,6 +1,7 @@
 {% extends "templates/web.html" %}
 
 {% block content %}
+<div class="container-fluid">
 <section class="section section-padding-top section-padding-bottom">
 	<div class='container'>
 		<div class="hero-content">
@@ -81,6 +82,7 @@
 	</div>
 </section>
 {% endif %}
+</div>
 
 {% endblock %}
 
